Fix: SlickGrid down arrows would jump into up arrows
Ooops. Must've missed this when fixing a unicode bug a while back.

--- a/packages/chart-parts/style/slickgrid.less
+++ b/packages/chart-parts/style/slickgrid.less
@@ -285,7 +285,7 @@
         }
         100% {
             color: transparent;
-            content: "\25B2";
+            content: "\25BC";
         }
     }
     .changeuparrow::before {
